fixed pagination text, add nav spacing

--- a/scss/_entry.scss
+++ b/scss/_entry.scss
@@ -33,6 +33,7 @@
 }
 
 .archive-title{
+	margin: 0 auto 30px;
 	span{
 		position: relative;
 		margin-right: 5px;
