--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -66,7 +66,7 @@ body{
 	top: 1px;
 	@media #{$lg}{
 		font-size: 14px;
-		top: 3px;
+		top: 2px;
 	}
 	&:hover{
 		background-color: $link-active;
