--- a/scss/_pagination.scss
+++ b/scss/_pagination.scss
@@ -7,6 +7,7 @@
 		font-family: 'prompt', arial;
 		color: $coal;
 		font-size: 12px;
+		font-weight: bold;
 		@media #{$sm}{
 			font-size: 16px;
 		}
